@@ -1,7 +1,6 @@
 # copied and rearranged from CGI-Application-Plugin-Session's t/11_sessiondelete.t
 
-#use Test::More tests => 19;
-use Test::More skip_all => "CAP::Session's bug (RT#81611)";
+use Test::More tests => 19;
 use File::Spec;
 #BEGIN { use_ok('CGI::Application::Plugin::Session') };
 
